[gd_scene load_steps=4 format=2]

[ext_resource path="res://juego/interface/ROBOTECH GP.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/test/GuardarTest.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="GuardarTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -925.0
margin_bottom = -618.0
script = ExtResource( 2 )

[node name="BotonGuardar" type="Button" parent="."]
margin_left = 462.0
margin_top = 331.0
margin_right = 474.0
margin_bottom = 351.0
text = "guardar"

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.089
margin_left = 423.0
margin_top = 112.0
margin_right = 507.0
margin_bottom = 167.042
custom_fonts/font = SubResource( 1 )
text = "texto"
align = 1
valign = 1

[node name="TextoResultadoJSON" type="Label" parent="."]
margin_left = 556.0
margin_top = 216.0
margin_right = 654.0
margin_bottom = 230.0
text = "Resultado JSON"

[node name="TextoResultadoTRES" type="Label" parent="."]
margin_left = 563.0
margin_top = 247.0
margin_right = 648.0
margin_bottom = 261.0
text = "resutado tres"

[node name="NombreJSON" type="LineEdit" parent="."]
margin_left = 465.0
margin_top = 210.0
margin_right = 523.0
margin_bottom = 234.0

[node name="NombreTRES" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 462.0
margin_top = 245.0
margin_right = 485.0
margin_bottom = 248.0

[node name="BotonCargar" type="Button" parent="."]
margin_left = 537.0
margin_top = 332.0
margin_right = 587.0
margin_bottom = 352.0
text = "cargar"

[node name="BotonGuardarGodot" type="Button" parent="."]
margin_left = 458.0
margin_top = 374.0
margin_right = 559.0
margin_bottom = 394.0
text = "GuardarGodot"

[node name="BotonCargarGodot" type="Button" parent="."]
margin_left = 579.0
margin_top = 368.0
margin_right = 669.0
margin_bottom = 388.0
text = "cargar godot"

[node name="BotonBorrar" type="Button" parent="."]
margin_left = 467.0
margin_top = 417.0
margin_right = 517.0
margin_bottom = 437.0
text = "borrar"

[connection signal="pressed" from="BotonGuardar" to="." method="_on_BotonGuardar_pressed"]
[connection signal="pressed" from="BotonCargar" to="." method="_on_BotonCargar_pressed"]
[connection signal="pressed" from="BotonGuardarGodot" to="." method="_on_BotonGuardarGodot_pressed"]
[connection signal="pressed" from="BotonCargarGodot" to="." method="_on_BotonCargarGodot_pressed"]
[connection signal="pressed" from="BotonBorrar" to="." method="_on_BotonBorrar_pressed"]
